# audio-network

./: .gitignore  Cargo.toml  README.md
proj1_acoustic_link/: .gitignore  Cargo.toml
proj1_acoustic_link/src/: lib.rs  main.rs
proj1_acoustic_link/src/audio/: audio.rs  callbacks.rs  mod.rs  packet.rs  writer.rs
proj1_acoustic_link/src/frame/: mod.rs  preamble.rs
proj1_acoustic_link/src/modem/: mod.rs  ofdm.rs  psk.rs  xbyb.rs
proj1_acoustic_link/src/node/: corrector.rs  frame_manager.rs  mod.rs  receiver.rs  sender.rs
proj1_acoustic_link/src/number/: mod.rs
proj1_acoustic_link/src/packet/: detector.rs  mod.rs
proj1_acoustic_link/tests/: part1.rs  part2.rs  part3.rs  tune_detector.rs
proj2_multiple_access/: Cargo.toml
proj2_multiple_access/src/: corrupted.rs  main.rs  terminal.rs
proj2_multiple_access/tests/: part1.rs
scripts/: enable_nat.sh  mod_icmp.sh  reset_firewall.sh  set_gateway.sh  traversal.py
src/: main.rs
src/audio/: audio.rs  callbacks.rs  packet.rs
src/csma/: lib.rs  terminal.rs
src/modem/: xbyb.rs
src/node/: mod.rs  sender.rs
tests/: part1.rs  part2.rs  part3.rs  tune_detector.rs
