[workspace]
members = [
    "proj1_acoustic_link",
    "proj2_multiple_access",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[workspace.dependencies]
rand = "0.8.5"
crossbeam-channel = "0.5"

[workspace.dependencies.nolog]
version = "1.0.19"
features = [
    "info",
    "release",
    "sep_colon",
    "indent_ignore_all",
    "location_style_classic"
]
