[package]
name = "audio_network"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[dependencies]
cfg-if = "1.0.0"
hound = "3.5.0"
jack = "0.11.4"
num-traits = "0.2.17"
once_cell = "1.18.0"
reed-solomon = "0.2.1"
rustfft = "6.1.0"
slice-deque = "0.3.0"
temp-dir = "0.1.11"
bitvec = "1.0.1"
argh = "0.1.10"
futures = "0.3.30"
ipnet = "2.9.0"
rand = "0.8.5"
crossbeam-channel = "0.5"
crc = "3.0.1"

[dependencies.fixed]
version = "1.24.0"
optional = true

[dependencies.cordic]
version = "0.1.5"
optional = true

[dependencies.tun]
version = "0.6.1"
features = ["async"]

[dependencies.nolog]
version = "1.0.19"
features = [
    "info",
    "release",
    "sep_colon",
    "indent_ignore_all",
    "location_style_classic"
]

[features]
fixed_point = ["fixed", "cordic"]
csma_ack = []
cable_link = []
default = ["cable_link"]
