[package]
name = "proj1_acoustic_link"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
hound = "3.5.0"
jack = "0.11.4"
num-traits = "0.2.17"
once_cell = "1.18.0"
reed-solomon = "0.2.1"
rustfft = "6.1.0"
slice-deque = "0.3.0"
temp-dir = "0.1.11"
bitvec = "1.0.1"
argh = "0.1.10"
rand.workspace = true
nolog.workspace = true
crossbeam-channel.workspace = true
futures = "0.3.30"
ipnet = "2.9.0"

[dependencies.fixed]
version = "1.24.0"
optional = true

[dependencies.cordic]
version = "0.1.5"
optional = true

[dependencies.tun]
version = "0.6.1"
features = ["async"]

[features]
fixed_point = ["fixed", "cordic"]
cable_link = []
default = ["cable_link"]
