[package]
name = "proj2_multiple_access"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3.0.1"
rand.workspace = true
nolog.workspace = true
crossbeam-channel.workspace = true

[dependencies.proj1_acoustic_link]
path = "../proj1_acoustic_link"
features = ["cable_link"]

[features]
default = ["csma_ack"]
csma_ack = []
